OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement_Group_Member__c/Vendor_Program_Requirement_Group_Member__c.object-meta.xml
<CustomObject>
    <description>The junction between a Requirement Group and a Requirement Definition.</description>
    <label>Vendor Program Requirement Group Member</label>
    <nameField>
        <displayFormat>VPRGM-{00000}</displayFormat>
        <label>Vendor Program Requirement Group Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Program Requirement Group Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>