OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement_Group_Member__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>