OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement_Group_Member__c/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether completion is mandatory</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>