OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement_Group_Member__c/fields/Vendor_Program_Requirement_Definition__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Requirement_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Requirement</description>
    <label>Vendor Program Requirement Definition</label>
    <referenceTo>Vendor_Program_Onboarding_Req_Template__c</referenceTo>
    <relationshipLabel>Vendor Program Requirement Group Members</relationshipLabel>
    <relationshipName>Vendor_Program_Requirement_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>