OnboardingV2Minimal/force-app/main/default/objects/Vendor_Program_Requirement_Group_Member__c/fields/Vendor_Program_Requirement_Group__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Requirement_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Group</description>
    <label>Vendor Program Requirement Group</label>
    <referenceTo>Vendor_Program_Requirement_Group__c</referenceTo>
    <relationshipLabel>Vendor Program Requirement Group Members</relationshipLabel>
    <relationshipName>Vendor_Program_Requirement_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>